# dotfiles

./: .bash_history  .bashrc  .gitignore  .gitmodules  .stow-local-ignore  .stowrc  .vimrc  .xinitrc  .zcompdump  .zshenv  .zshrc  README.md  install.sh  test  test.cpp
.config/: starship.toml
.config/alacritty/: alacritty-monitor.yml  alacritty.toml  alacritty.yml  alacritty.yml.darkbak
.config/awesome/: rc.lua
.config/dconf/: user
.config/dunst/: dunstrc
.config/flameshot/: flameshot.ini
.config/github-copilot/: hosts.json  versions.json
.config/gtk-3.0/: bookmarks
.config/hypr/: hyprland.conf  hyprpaper.conf  hyprshade.toml  mode.sh  pyprland.toml
.config/hypr/gaps/: .gitignore  CMakeLists.txt  README.md  flake.nix
.config/hypr/gaps/src/: Hooks.cpp  Hooks.hpp  globals.hpp  log.hpp  main.cpp
.config/kitty/: kitty.conf
.config/nitrogen/: bg-saved.cfg  nitrogen.cfg
.config/picom/: picom.conf  picom.sample.conf
.config/polybar/: colors.ini  config.ini  modules.ini
.config/pulse/: abf7016c290c4930a4860651be824179-device-volumes.tdb  abf7016c290c4930a4860651be824179-stream-volumes.tdb  c0eb843a112b4ed38eab5beee0fd1ec7-device-volumes.tdb  c0eb843a112b4ed38eab5beee0fd1ec7-stream-volumes.tdb  cookie
.config/rofi/: config.rasi
.config/rstudio/: Cookies  Network Persistent State  Preferences  config.json  rstudio-prefs.json
.config/spotify/: prefs
.config/textext/: config.json
.config/tmux/: tmux.conf
.config/tofi/: config
.config/waybar/: config  config.jsonc  style.css
.config/zsh/: .p10k.zsh  (+5 more)
.fonts/: typescript
.vim/: .netrwhist
(+1347 files in other folders)
